Finds the nearest display to show the follow-cursor IME window, instead of  using the primary one.

BUG=645842

Review-Url: https://codereview.chromium.org/2335503002
Cr-Commit-Position: refs/heads/master@{#417912}

Former-commit-id: e5f54fe9dfb5a8743b16eba7e85ace45e3d7ef62